Don't make the optimization of not calling the parent context's GetStyleData when there are 'em' or similar units for the 'font-size' property, where those units imply inheritance.  b=131454  r=bzbarsky  sr=hyatt  a=asa